--- a/Pokemon/Pokemon.csproj
+++ b/Pokemon/Pokemon.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attack.cs" />
-    <Compile Include="Battle.cs" />
-    <Compile Include="IPokemon.cs" />
-    <Compile Include="PlayerPokemon.cs" />
-    <Compile Include="Pokemon.cs" />
+    <Compile Include="Encounters\Attack.cs" />
+    <Compile Include="Encounters\PlayerBattle.cs" />
+    <Compile Include="Encounters\IEncounter.cs" />
+    <Compile Include="Encounters\WildPokemonEncounter.cs" />
+    <Compile Include="Pokemon\IPokemon.cs" />
+    <Compile Include="Pokemon\PlayerPokemon.cs" />
+    <Compile Include="Pokemon\Pokemon.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Turn.cs" />
@@ -55,6 +57,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
