--- a/Pokemon/Pokemon.csproj
+++ b/Pokemon/Pokemon.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Encounters\PlayerBattle.cs" />
     <Compile Include="Encounters\IEncounter.cs" />
     <Compile Include="Encounters\WildPokemonEncounter.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Pokemon\IPokemon.cs" />
     <Compile Include="Pokemon\PlayerPokemon.cs" />
